--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "particle-api-js": "^7.2.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "dotenv": "^5.0.1"
+  },
+  "scripts": {
+    "build": "babel src -d lib"
   }
 }
