--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "dotenv": "^5.0.1"
+    "dotenv": "^5.0.1",
+    "prettier": "1.12.0"
   },
   "scripts": {
-    "build": "babel src -d lib"
+    "build": "babel src -d lib",
+    "prettier":
+      "prettier --single-quote --trailing-comma es5 --write ./**/*.{js,md,css,json}"
   }
 }
