--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Kevin Lazich <dev@kevinlazich.com>",
   "license": "MIT",
   "dependencies": {
-    "particle-api-js": "^7.2.0"
+    "particle-api-js": "^7.2.0",
+    "particle-cli": "^1.29.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
