--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "author": "Kevin Lazich <dev@kevinlazich.com>",
   "license": "MIT",
   "dependencies": {
-    "node-red": "^0.18.4",
+    "@google-cloud/datastore": "^1.4.0",
+    "@google-cloud/pubsub": "^0.18.0",
+    "colors": "^1.2.1",
     "particle-api-js": "^7.2.0",
-    "particle-cli": "^1.29.0"
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -17,8 +19,9 @@
   },
   "scripts": {
     "build": "babel src -d lib",
-    "prettier": "prettier --single-quote --trailing-comma es5 --write ./**/*.{js,md,css,json}",
-    "start": "node -r dotenv/config lib/index.js",
+    "prettier":
+      "prettier --single-quote --trailing-comma es5 --write ./**/*.{js,md,css,json}",
+    "start": "node -r dotenv/config lib/subscriptions.js",
     "prestart": "yarn build"
   }
 }
