--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/datastore": "^1.4.0",
-    "@google-cloud/pubsub": "^0.18.0",
+    "@google-cloud/pubsub": "^0.19.0",
     "colors": "^1.2.1",
+    "faker": "^4.1.0",
+    "jsonwebtoken": "^8.3.0",
+    "luxon": "^1.3.1",
+    "moment": "^2.22.2",
+    "mqtt": "^2.18.2",
     "particle-api-js": "^7.2.0",
     "util": "^0.10.3"
   },
@@ -15,14 +20,14 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "dotenv": "^5.0.1",
+    "dotenv": "^6.0.0",
     "prettier": "1.12.0"
   },
   "scripts": {
     "build": "babel src -d lib",
     "prettier":
       "prettier --single-quote --trailing-comma es5 --no-semi --write ./**/*.{js,md,css,json}",
-    "start": "node -r dotenv/config lib/subscriptions.js",
+    "start": "node -r dotenv/config lib/client/index.js",
     "prestart": "yarn build"
   }
 }
