--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@ node_modules
 .env
 lib
 *.log
-
+*.pem
 .tern*
 .idea
 .vscode
 gcp_private_key.json
-motor-controller-01-0468075f1c61.json
-motor-controller-01-0303c2fd7fd7.json
+motor-controller-01-*.json
+keys/
